* frontend: небольшие правки по проекту

--- a/frontend/src/_layouts/base.jade
+++ b/frontend/src/_layouts/base.jade
@@ -18,9 +18,9 @@ head
     title oki-doki
     meta(name='description', content= 'A new Yeogurt application')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
-    link(href="https://fonts.googleapis.com/css?family=Scada:400,400i,700,700i" rel="stylesheet")
-    link(href="https://fonts.googleapis.com/css?family=Rubik:400,500,700" rel="stylesheet")
-    link(href="https://fonts.googleapis.com/css?family=Fira+Sans&amp;subset=cyrillic" rel="stylesheet")
+    link(href="https://fonts.googleapis.com/css?family=Scada:400,400i,700,700i&subset=cyrillic" rel="stylesheet")
+    link(href="https://fonts.googleapis.com/css?family=Rubik:400,500,700&subset=cyrillic" rel="stylesheet")
+    link(href="https://fonts.googleapis.com/css?family=Fira+Sans&subset=cyrillic" rel="stylesheet")
     
     block stylesheets
         link(rel='stylesheet', href= baseUrl + 'styles/main.css')
@@ -113,5 +113,6 @@ body.ui-page
             .row.row--xl-center.row--no-gutters
                 .ui-footer-copy.col.col--xl-12.col--no-gutters
                     .ui-copy © 2001-2017 «ОКИ-ДОКИ»#[br] Все представленные материалы защищены авторскими правами. Воспроизведение или распространение указанных материалов в любой форме может#[br] производиться только с письменного разрешения правообладателя. При использовании, ссылка на правообладателя и источник заимствования обязательна.
+    .ui-px-overlay
     block scripts
         script(src= baseUrl + 'scripts/main.js')
