--- a/frontend/src/_styles/modules/product-cart.styl
+++ b/frontend/src/_styles/modules/product-cart.styl
@@ -12,7 +12,7 @@
         font-size 26px
         line-height 32px
         border-bottom 1px solid #43b4bb
-        padding 27px 30px 15px 30px
+        padding 20px 29px 17px 29px
 
         &--darkcoral
             border-bottom 1px solid #df7d76
@@ -20,7 +20,7 @@
     &__description
         font-size 20px
         line-height 26px
-        padding 25px 30px 30px 30px
+        padding 21px 29px 30px
 
     &__footer
         background #fff
@@ -38,10 +38,10 @@
         right 0
 
     &__price
-        padding 37px 79px 20px 30px
+        padding 32px 80px 10px 29px
 
     &__time
-        padding 0 79px 20px 30px
+        padding 6px 80px 38px 29px
 
 .ui-product-cart-mini
     font-family 'Panton'
@@ -51,9 +51,10 @@
     font-weight bold
     display flex
     justify-content space-between
+    margin-bottom 17px
 
     &__link
-        width 122px
+        width 130px
 
     &__info
         width 100%
@@ -62,12 +63,12 @@
     &__title
         position absolute
         top 20px
-        left 20px
+        left 21px
 
     &__price
         position absolute
-        bottom 20px
-        left 20px
+        bottom 27px
+        left 21px
 
 .ui-product-cart
     box-shadow 0px 3px 5px 0px rgba(0, 0, 0, .1)
