--- a/frontend/src/_styles/grid/components/col.styl
+++ b/frontend/src/_styles/grid/components/col.styl
@@ -1,10 +1,16 @@
 .col
-  box-sizing: border-box
-  flex: 0 0 100%
-  max-width: 100%
-  min-height: 1px;
-  padding-right: 15px;
-  padding-left: 15px;
+    box-sizing border-box
+    flex 0 0 100%
+    max-width 100%
+    min-height 1px
+    padding-right 15px
+    padding-left 15px
 
-  +variant(no-gutters)
-    padding: 0
+    +variant(no-gutters)
+        padding 0
+
+    +variant(no-gutter-right)
+        padding-right 0
+
+    +variant(no-gutter-left)
+        padding-left 0
