--- a/frontend/src/_styles/modules/fonts.styl
+++ b/frontend/src/_styles/modules/fonts.styl
@@ -1,7 +1,6 @@
 @font-face
     font-family 'Panton'
-    src url('/fonts/panton/panton.woff2') format('woff2'),
-        url('/fonts/panton/panton.woff') format('woff')
+    src url('/fonts/panton/panton-webfont.woff2') format('woff2'), url('/fonts/panton/panton-webfont.woff') format('woff'), url('/fonts/panton/panton-webfont.ttf') format('truetype');
     font-weight normal
     font-style normal
 
