page faq, добавлена форма

--- a/frontend/src/_styles/main.styl
+++ b/frontend/src/_styles/main.styl
@@ -811,6 +811,24 @@ init($breakpoints, $columns)
         background-size cover
         box-shadow 0px 3px 5px 0px rgba(0, 0, 0, 0.1)
 
+    &__form
+        padding 50px 0
+        display flex
+        justify-content center
+
+    &__text
+        font-family 'Panton'
+        font-size 20px
+        color #1c282a
+        line-height 32px
+        font-weight bold
+        padding-bottom 45px
+
+        span
+            font-size 16px
+            font-weight normal
+            font-style italic
+
 .ui-showfaq
     display none
     background #444
