--- a/frontend/src/faq/index.jade
+++ b/frontend/src/faq/index.jade
@@ -83,3 +83,18 @@ block content
                                         span + 
                                         | Что означает «Оки-Доки»?
                                     .ui-showfaq Все будет хорошо! Согласен делать хорошо! Все хорошо!
+            .row.ui-page-faq__form
+                .col.col--xl-8
+                    .ui-page-faq__text Задать свой вопрос
+                        span #[br]Поля, отмеченные *, обязательны для заполнения
+                    form.ui-form.ui-form-request
+                        .ui-form-request__header
+                            .ui-form-request__title Пишите нам
+                            .ui-form-request__description Наши менеджеры максимально оперативно ответят на все Ваши вопросы
+                        .ui-form-request__content
+                            input.ui-input(type="text", placeholder="Контактное лицо")
+                            input.ui-input(type="text", placeholder="E-mail")
+                            a.ui-button.ui-button--size-lg.ui-button--block.ui-button--default Отправить
+                        .ui-form-request__content
+                            input.ui-input(type="text", placeholder="Тема")
+                            textarea.ui-textarea(type="text", placeholder="Ваше сообщение")
