--- a/frontend/src/_styles/main.styl
+++ b/frontend/src/_styles/main.styl
@@ -847,6 +847,9 @@ init($breakpoints, $columns)
 .ui-service
     padding-bottom 40px
 
+    &__line
+        padding-top 40px
+
 .ui-advantages
     padding-bottom 50px
 
