--- a/frontend/src/_styles/modules/text-block.styl
+++ b/frontend/src/_styles/modules/text-block.styl
@@ -40,6 +40,11 @@
         max-height 425px
         overflow hidden
 
+    &__photo
+        width 100%
+        max-height 214px
+        overflow hidden
+
     &__flex
         display flex
 
