* frontentd: мобильная версия для главной

--- a/frontend/src/_layouts/base.jade
+++ b/frontend/src/_layouts/base.jade
@@ -33,16 +33,16 @@ body.ui-page
         .ui-header__content
             .grid.grid--container
                 .row.row--xl-center
-                    .col.col--xl-2.col--md-3
+                    .col.col--xl-2.col--md-3.col--xs-12.text--xs-center.text--lg-left
                         a.ui-logo(href="/")
                             img(src="/images/header-logo.png")
-                    .col.col--xl-8.col--md-6.col--md-flex.ui-header__info
+                    .col.col--xl-8.col--md-6.col--xs-12.col--md-flex.ui-header__info.text--xs-center.text--lg-left
                         .ui-slogan  Производство и продажа#[br] офисных перегородок
                         .ui-address.ui-address__header
                             img(src="/images/location.png")
                             | Г. МОСКВА,#[br]  СОКОЛЬНИЧЕСКИЙ ВАЛ, 1А
                         .ui-regim ПН-ЧТ 9:00 — 19:00#[br] ПТ 9:00 — 18:00
-                    .col.col--xl-2.col--md-3.text--xl-center
+                    .col.col--xl-2.col--md-3.text--xs-center.text--lg-left.col--xs-12
                         .ui-phone 8 (495) 663 18 81
         .ui-header__menu
             .grid.grid--container
