--- a/frontend/src/index.jade
+++ b/frontend/src/index.jade
@@ -10,7 +10,7 @@ block content
                 .col.col--xl-12
                     .ui-catalog-interactives__title Технологии офисного#[br] пространства
             .row
-                .col.col--xl-4.col--no-gutter-right
+                .col.col--xl-4.col--xs-12.col--no-gutter-right
                     .ui-catalog-interactives__product-cart
                         .ui-product-cart-small
                             .ui-product-cart-small__title.ui-product-cart-small__title--darkcoral Цельностеклянные#[br] перегородки
@@ -21,7 +21,7 @@ block content
                                 .ui-product-cart-small__link
                                     a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="#")
                                         i +
-                .col.col--xl-8
+                .col.col--xl-8.col--xs-12
                     .ui-catalog-interactives__img
                         img(src="/images/catalog-interactives.png")
     .ui-main-home
@@ -98,7 +98,8 @@ block content
                                 .ui-product-cart-small__title.ui-product-cart-small__title--darkcoral Цельностеклянные#[br] перегородки
                                 .ui-product-cart-small__description Цельностеклянные перегородки имеют безрамную конструкцию и создают ощущение открытого пространства в вашем офисе
                                 .ui-product-cart-small__footer
-                                    .ui-product-cart-small__price Цена от 3600 руб/м2
+                                    .ui-product-cart-small__price Цена от 3600 руб/м
+                                        sup 2
                                     .ui-product-cart-small__time Срок: от 10 дней
                                     .ui-product-cart-small__link
                                         a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="#")
