frontend: добавлена детальная страница каталога

--- a/frontend/src/_styles/_variable.styl
+++ b/frontend/src/_styles/_variable.styl
@@ -15,6 +15,8 @@ $color-ashgrey = #b8b8b8
 $color-whitesmoke = #f6f6f6
 $color-darkjunglegreen = #282828
 
+$font-rubik = 'Rubik', sans-serif;
+
 $breakpoints = {
   'xs' :  0,
   'sm' : 544px,
