--- a/frontend/src/_styles/grid/mixins/helpers.styl
+++ b/frontend/src/_styles/grid/mixins/helpers.styl
@@ -27,6 +27,9 @@ make-col-helpers($breakpoint)
   .col--{$breakpoint}-flex
     display: flex
 
+  .col--{$breakpoint}-auto
+      flex initial
+
 // Helper for aligning the text
 make-text-helpers($breakpoint)
   .text--{$breakpoint}-right
