--- a/frontend/src/_styles/modules/button.styl
+++ b/frontend/src/_styles/modules/button.styl
@@ -2,6 +2,7 @@
     outline 0
     background rgba(255, 255, 255, 0)
     border 0
+    display inline-block
     color $color-default
     font-weight lighter
     font-family 'Rubik', sans-serif
@@ -28,9 +29,6 @@
         border-radius 3px
         line-height 32px
         color $color-dark
-        background-image -moz-linear-gradient( 90deg, rgb(221,229,238) 0%, rgb(221,229,238) 53%, rgb(255,255,255) 100%)
-        background-image -webkit-linear-gradient( 90deg, rgb(221,229,238) 0%, rgb(221,229,238) 53%, rgb(255,255,255) 100%)
-        background-image -ms-linear-gradient( 90deg, rgb(221,229,238) 0%, rgb(221,229,238) 53%, rgb(255,255,255) 100%)
 
         &:hover
             background-color #fff
@@ -184,9 +182,79 @@
     align-items center
     justify-content center
     display flex
-    line-height 22px
-    padding 54px
-    cursor pointer
 
-    &:hover
-        color #fff
+.ui-icon-button
+    outline 0
+    background rgba(255, 255, 255, 0)
+    border 0
+    display inline-block
+    color $color-default
+    font-weight lighter
+    font-family 'Rubik', sans-serif
+    text-decoration none
+    cursor pointer
+    transition background-color .2s ease, color .2s ease
+    display flex
+
+    &--size-lg
+        font-size 20px
+        line-height 32px
+        border 1px solid
+        border-radius 3px
+
+        & ^[0]__icon
+            border-right 2px solid
+            padding 7px 25px
+
+        & ^[0]__text
+            padding 7px 25px
+
+    &--size-md
+        font-size 20px
+        font-family 'Panton'
+        padding 16px 30px
+        border 1px solid
+
+    &--size-xs
+        font-size 14px
+        padding 7px 18px
+        border-radius 3px
+        line-height 32px
+        color $color-dark
+
+        &:hover
+            background-color #fff
+            color $color-darkcoral
+
+    &--default
+        background-color $color-darkcoral
+        color $color-snow
+        border-color $color-darkcoral
+        text-align center
+
+        &:hover
+            background-color #fff
+            color $color-darkcoral
+
+    &--grey
+        background #f9f9f9
+        color $color-dark
+        box-shadow 0px 3px 5px 0px rgba(0, 0, 0, 0.1)
+        text-transform uppercase
+        font-weight bold
+        border-top 4px solid transparent
+        padding 18px
+
+        &:hover
+        &^[1]--active
+            color $color-dark
+            border-top 4px solid $color-darkcoral
+
+    &--black
+        background-color $color-smokyblack
+        color $color-snow
+        border-color $color-smokyblack
+
+        &:hover
+            background-color $color-snow
+            color $color-smokyblack
