--- a/frontend/src/_styles/modules/form.styl
+++ b/frontend/src/_styles/modules/form.styl
@@ -7,6 +7,9 @@
     border 0
     color $color-dark
 
+    &--block
+        width 100%
+
 .ui-textarea
     background-color #f5f5f5
     border-radius 3px
@@ -21,20 +24,23 @@
     font-family 'Rubik'
     color #fff
 
+    &--red
+        background $color-darkcoral
+
 .ui-form-calcalate
-    display flex
-    align-items center
-    padding 35px 0 35px 24px
+
+    &__header
+        padding-top 28px
+        padding-bottom 22px
+
+    &__content
+        padding-top 28px
+        padding-bottom 22px
 
     &__title
         font-size 26px
         line-height 32px
         padding-bottom 27px
-
-    &__layout
-        display flex
-        align-items center
-        justify-content space-between
 
     &__about
         display flex
