--- a/frontend/src/_styles/modules/heading.styl
+++ b/frontend/src/_styles/modules/heading.styl
@@ -1,21 +1,23 @@
 .ui-heading
-	margin 0
-	padding 0
+    margin 0
+    padding 0
 
-	&--white
-		color $color-snow
+    &--white
+        color $color-snow
 
-	&--black
-		color #1c282a
-		font-weight bold
-		text-transform uppercase
+    &--black
+        color #1c282a
+        font-weight bold
 
-	&--lvl2
-		font-family 'Panton'
-		font-size 40px
-		line-height 50px
+    &--lvl2
+        font-family 'Panton'
+        font-size 40px
+        line-height 50px
 
-	&--lvl3
-		font-family 'Panton'
-		font-size 30px
-		line-height 30px
+    &--lvl3
+        font-family 'Panton'
+        font-size 30px
+        line-height 30px
+
+    &--uppercase
+        text-transform uppercase
