* frontend: удалены лишние блоки на форме задать вопрос

--- a/frontend/src/faq/index.jade
+++ b/frontend/src/faq/index.jade
@@ -87,14 +87,15 @@ block content
                 .col.col--xl-8
                     .ui-page-faq__text Задать свой вопрос
                         span #[br]Поля, отмеченные *, обязательны для заполнения
-                    form.ui-form.ui-form-request
-                        .ui-form-request__header
-                            .ui-form-request__title Пишите нам
-                            .ui-form-request__description Наши менеджеры максимально оперативно ответят на все Ваши вопросы
-                        .ui-form-request__content
-                            input.ui-input(type="text", placeholder="Контактное лицо")
-                            input.ui-input(type="text", placeholder="E-mail")
-                            a.ui-button.ui-button--size-lg.ui-button--block.ui-button--default Отправить
-                        .ui-form-request__content
-                            input.ui-input(type="text", placeholder="Тема")
-                            textarea.ui-textarea(type="text", placeholder="Ваше сообщение")
+                    form.grid.ui-form.ui-form-request
+                        .row
+                            .col.col--xl-4
+                                .ui-form-request__title Пишите нам
+                                .ui-form-request__description Наши менеджеры максимально оперативно ответят на все Ваши вопросы
+                            .col.col--xl-4
+                                input.ui-input.ui-input--block(type="text", placeholder="Контактное лицо")
+                                input.ui-input.ui-input--block(type="text", placeholder="E-mail")
+                                a.ui-button.ui-button--size-lg.ui-button--block.ui-button--default Отправить
+                            .col.col--xl-4
+                                input.ui-input.ui-input--block(type="text", placeholder="Тема")
+                                textarea.ui-textarea(type="text", placeholder="Ваше сообщение")
