* frontend: исправлена форма на странице проектов

--- a/frontend/src/_styles/main.styl
+++ b/frontend/src/_styles/main.styl
@@ -792,6 +792,7 @@ init($breakpoints, $columns)
 
     &__header
         padding 30px 0
+        text-transform uppercase
 
 .ui-projects-history
     padding-bottom 30px
