--- a/frontend/src/projects/index.jade
+++ b/frontend/src/projects/index.jade
@@ -122,20 +122,24 @@ block content
                         a.ui-pagination__item 5
                         span ...
                         a.ui-button.ui-button--size-md.ui-button--pagination-next Дальше
-    .ui-price-calculate
-        .grid.grid--container
-            .row
-                .col.col--xl-12
-                    form.ui-form.ui-form-calcalate
-                        .ui-form-calcalate__header
+    .ui-price-calculate.grid.grid--container
+        .row
+            .col.col--xl-12
+                .grid
+                    form.row.row--no-gutters.ui-form.ui-form-calcalate
+                        .col.col--xl-3.ui-form-calcalate__header
                             .ui-form-calcalate__title Узнать стоимость
                             .ui-form-calcalate__description Вы можете получить расчет стоимости в течение 1-2 часов
                         .col.col--xl-9
                             .ui-form-calcalate__content
-                                .ui-form-calcalate__layout
-                                    input.ui-input(type="text", placeholder="Контактное лицо")
-                                    input.ui-input(type="text", placeholder="Телефон")
-                                    a.ui-button.ui-button--size-lg.ui-button--default Расчитать стоимость
+                                .grid
+                                    .row
+                                        .col.col--xl-4
+                                            input.ui-input.ui-input--block(type="text", placeholder="Контактное лицо")
+                                        .col.col--xl-4
+                                            input.ui-input.ui-input--block(type="text", placeholder="Телефон")
+                                        .col.col--xl-4
+                                            a.ui-button.ui-button--size-lg.ui-button--block.ui-button--default Расчитать стоимость
                                 .ui-form-calcalate__about 
                                     .ui-form-calcalate__icon !
                                     .ui-form-calcalate__text Также Вы можете получить моментальную консультацию по стоимости #[br]у нашего специалиста просто позвонив по номеру: (495) 663 18 81
