--- a/frontend/src/_styles/main.styl
+++ b/frontend/src/_styles/main.styl
@@ -21,6 +21,7 @@
 @import 'modules/projects-cart';
 @import 'modules/press-cart';
 @import 'modules/text-block';
+@import 'modules/color-block';
 @import 'modules/certificates-cart';
 
 @import 'grid/mixins/helpers'
@@ -949,3 +950,32 @@ init($breakpoints, $columns)
     background-position: -10px -6px;
     z-index 1000
     display none
+
+.ui-materials
+    padding-bottom 50px
+
+    &__headerlvl1
+        font-family 'Panton'
+        font-size 26px
+        color #1c282a
+        line-height 23px
+        font-weight bold
+        padding 50px 0
+
+    &__headerlvl2
+        font-family 'Panton'
+        font-size 20px
+        color #1c282a
+        line-height 26px
+        font-weight bold
+        padding 40px 0
+
+    &__text
+        font-family 'Panton'
+        font-size 16px
+        color #1c282a
+        line-height 23px
+        padding 28px 0
+
+    &__line
+        padding-top 20px
