--- a/frontend/src/_styles/modules/text-block.styl
+++ b/frontend/src/_styles/modules/text-block.styl
@@ -78,6 +78,12 @@
         font-size 20px
         line-height 26px
 
+    &__text-average
+        font-size 20px
+        color #1c282a
+        line-height 20px
+        font-weight bold
+
     &__textbold
         font-weight bold
         text-align center
@@ -85,3 +91,18 @@
 
         span
             font-weight normal
+
+    &__step
+        font-family 'Panton'
+        font-size 16px
+        color #1c282a
+        line-height 26px
+        font-weight bold
+
+    ul
+        padding-top 20px
+
+     li
+        text-indent 30px
+        list-style none
+        font-weight normal
