--- a/frontend/src/_styles/modules/material-box.styl
+++ b/frontend/src/_styles/modules/material-box.styl
@@ -20,3 +20,29 @@
     &__link
         width 75px
         height 75px
+
+.ui-material-block
+    box-shadow 0px 3px 5px 0px rgba(0, 0, 0, 0.1)
+    min-height 100%
+    display flex
+    flex-direction column
+
+    &__title
+        background-repeat no-repeat
+        background-position 50% 50%
+        background-size cover
+        font-family 'FiraSans'
+        font-size 26px
+        color #ffffff
+        line-height 22px
+        font-weight bold
+        padding 32px 18px 29px
+
+    &__description
+        background $color-whitesmoke
+        font-family 'Panton'
+        font-size 16px
+        color #090909
+        line-height 20px
+        padding 18px 18px 25px 18px
+        flex 1
