* frontend: minor fix

--- a/frontend/src/_styles/main.styl
+++ b/frontend/src/_styles/main.styl
@@ -22,6 +22,7 @@
 @import 'modules/press-cart';
 @import 'modules/text-block';
 @import 'modules/certificates-cart';
+@import 'modules/box';
 
 @import 'grid/mixins/helpers'
 @import 'grid/mixins/grid-framework'
@@ -48,6 +49,9 @@ init($breakpoints, $columns)
 .ui-page
   display flex
   flex-direction column
+
+.ui-text-page
+    padding-bottom 35px
 
 .ui-header
     display flex
