* frontend: исправлена форма на странице матриалов

--- a/frontend/src/_styles/modules/heading.styl
+++ b/frontend/src/_styles/modules/heading.styl
@@ -19,5 +19,10 @@
         font-size 30px
         line-height 30px
 
+    &--lvl4
+        font-family 'Panton'
+        font-size 26px
+        line-height 32px
+
     &--uppercase
         text-transform uppercase
