--- a/frontend/src/_styles/main.styl
+++ b/frontend/src/_styles/main.styl
@@ -1058,4 +1058,22 @@ init($breakpoints, $columns)
     &__line
         padding-top 20px
 
+.ui-examples
+    background $color-whitesmoke
+    box-shadow 0px 3px 5px 0px rgba(0, 0, 0, .1)
+    padding 34px 0
+
+    &__header
+        color #040404
+        font-weight bold
+        line-height 50px
+        padding-bottom 90px
+
+    &__content
+        background-repeat no-repeat
+        background-size cover
+        background-position 50% 50%
+        height 234px
+        width 100%
+
 @import 'catalog-detail';
