--- a/frontend/src/_styles/modules/product-cart.styl
+++ b/frontend/src/_styles/modules/product-cart.styl
@@ -4,6 +4,8 @@
     font-family 'Panton'
     width 100%
     box-shadow 0px 3px 5px 0px rgba(0, 0, 0, 0.1)
+    display flex
+    flex-direction column
 
     &--darkcoral
         background $color-darkcoral
@@ -21,6 +23,7 @@
         font-size 20px
         line-height 26px
         padding 21px 29px 30px
+        flex 1
 
     &__footer
         background #fff
@@ -57,7 +60,7 @@
         width 130px
 
     &__info
-        width 100%
+        flex 1
         position relative
 
     &__title
