--- a/frontend/src/_layouts/base.jade
+++ b/frontend/src/_layouts/base.jade
@@ -53,7 +53,7 @@ body.ui-page
                       .ui-menu__item
                           a.ui-menu__link(href="/configurations/") Конфигурации
                       .ui-menu__item
-                          a.ui-menu__link(href="") Сервис
+                          a.ui-menu__link(href="/service/") Сервис
                       .ui-menu__item
                           a.ui-menu__link(href="/projects/") Проекты
                       .ui-menu__item
