--- a/frontend/src/_styles/main.styl
+++ b/frontend/src/_styles/main.styl
@@ -926,6 +926,14 @@ init($breakpoints, $columns)
     &__line
         padding-top 40px
 
+    &__photo
+        width 100%
+        height 100%
+        background-position 50% 50%
+        background-repeat no-repeat
+        background-size cover
+        box-shadow 0px 3px 5px 0px rgba(0, 0, 0, 0.1)
+
 .ui-advantages
     padding-bottom 50px
 
