* frontend: обновлен компонент вертикального отображения прогресса

--- a/frontend/src/_styles/modules/text-block.styl
+++ b/frontend/src/_styles/modules/text-block.styl
@@ -99,10 +99,10 @@
         line-height 26px
         font-weight bold
 
-    ul
+    ul:not('.ui-steps-vertical')
         padding-top 20px
 
-     li
-        text-indent 30px
-        list-style none
-        font-weight normal
+        li
+            text-indent 30px
+            list-style none
+            font-weight normal
