--- a/frontend/src/_styles/modules/steps-vertical.styl
+++ b/frontend/src/_styles/modules/steps-vertical.styl
@@ -6,8 +6,8 @@
 
     li
         position relative
-        padding-left 30px
-        line-height 20px
+        padding-left 39px
+        line-height 26px
 
         &:before
             position absolute
@@ -18,33 +18,34 @@
             color red
             display block
             border-radius 50%
-            border 1px solid red
-            line-height 20px
-            height 20px
-            width 20px
+            border 3px solid red
+            line-height 25px
+            height 31px
+            width 31px
             text-align center
+            font-weight bold
 
         &:after
             content ''
             display block
             position absolute
-            height calc(100% - 9px)
+            height calc(100% - 14px)
             border 2px solid #f00
-            left 9px
-            top 20px
+            left 14px
+            top 31px
 
         &:last-child:after
             display none
 
     li + li
-        padding-top 10px
+        padding-top 20px
 
         &:before
-            top 11px
+            top 17px
 
         &:after
-            top 31px
-            height calc(100% - 20px)
+            top 48px
+            height calc(100% - 31px)
 
 .ui-step-check
     list-style none
